5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1671_1105.log
== TEST (2019-04-24 14:17:24) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasão:")

print("Entrada: X")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: X
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:17:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada: X")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: X
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:18:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada: X")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.16666
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: X
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: X
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: X
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:18:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada: X")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: X
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:18:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada: x")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: x
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:18:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:"x)
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada:"x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:19:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:""x")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:x
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:19:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:"x)
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 5
    print("Entrada:"x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:20:20) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:"(x))
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Entrada:"(x))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:20:43) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:x")
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada:x
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:21:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:",x)
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:21:35) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("brasao:")

print("Entrada:",x)
if(x=="lobo"):
	print("Casa: Stark")
elif(x=="leal"):
	print("Casa: Lannister")
elif(x=="veado"):
   print("Casa: Baratheon")
elif(x=="dragao"):
	print("Casa: Targaryen")
elif(x=="rosa"):
	print("Casa: Tyrell")
elif(x=="sol"):
	print("Casa: Martel")
elif(x=="lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.127938
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
